--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -62,7 +62,10 @@
   </p>
   </div>
   <div class="tBotton">
+  <% employee = Employee.find(current_user.employee_id) %>
+    <% if employee.employee_type == 1 %>
     <%= link_to edit_client_path(@client) do%><div class="functionality_add btn btn-primary">Chỉnh sửa</div><% end %>
+      <% end %>
   </div>
   </div>
 </center>
