--- a/app/assets/stylesheets/employees.scss
+++ b/app/assets/stylesheets/employees.scss
@@ -132,6 +132,7 @@
     }
     .functionality_item{
         flex-grow: 1; 
+        max-width: calc(33.33% - 10px); 
         padding: 10px;
         margin: 5px;
         border: solid 1px gray;
@@ -142,6 +143,7 @@
     }
     .button_selected {
         flex-grow: 1; 
+        background-color: #fff;
         padding: 10px;
         margin: 5px;
         border: solid 1px black;
