--- a/app/assets/stylesheets/room_prices.scss
+++ b/app/assets/stylesheets/room_prices.scss
@@ -134,6 +134,7 @@
         flex-grow: 1; 
         padding: 10px;
         margin: 5px;
+        max-width: calc(33.33% - 10px); 
         border: solid 1px gray;
         text-align: center;
         border-radius: 4px;
@@ -144,6 +145,7 @@
         flex-grow: 1; 
         padding: 10px;
         margin: 5px;
+        background-color: #fff;
         border: solid 1px black;
         text-align: center;
         border-radius: 4px;
