--- a/app/assets/stylesheets/room_types.scss
+++ b/app/assets/stylesheets/room_types.scss
@@ -111,7 +111,7 @@
     }
 
     .functionality_add {
-        flex-grow: 1; 
+        flex-grow: 1;  
         padding: 10px;
         margin: 5px;
         border: solid 1px back;
@@ -120,6 +120,7 @@
     }
     .functionality_item{
         flex-grow: 1; 
+        max-width: calc(33.33% - 10px);
         padding: 10px;
         margin: 5px;
         border: solid 1px gray;
@@ -132,6 +133,7 @@
         flex-grow: 1; 
         padding: 10px;
         margin: 5px;
+        background-color: #fff;
         border: solid 1px black;
         text-align: center;
         border-radius: 4px;
