--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -145,6 +145,7 @@
     .functionality_item{
         flex-grow: 1; 
         padding: 10px;
+        max-width: calc(33.33% - 10px); 
         margin: 5px;
         border: solid 1px gray;
         text-align: center;
@@ -156,6 +157,7 @@
         flex-grow: 1; 
         padding: 10px;
         margin: 5px;
+        background-color: #fff;
         border: solid 1px black;
         text-align: center;
         border-radius: 4px;
