--- a/app/views/room_prices/show.html.erb
+++ b/app/views/room_prices/show.html.erb
@@ -47,7 +47,10 @@
     </p>
     </div>
     <div class="tBotton">
+    <% employee = Employee.find(current_user.employee_id) %>
+      <% if employee.employee_type == 1 %>
       <%= link_to edit_room_price_path(@room_price) do%><div class="functionality_add btn btn-primary">Chỉnh sửa</div><% end %>
+      <% end %>
     </div>
     </div>
   </center>
