--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -51,8 +51,12 @@
     </p>
     </div>
     <div class="tBotton">
+    <% employee = Employee.find(current_user.employee_id) %>
+    <% if employee.employee_type == 1 %>
       <%= link_to edit_room_path(@room) do%><div class="functionality_add btn btn-primary">Chỉnh sửa</div><% end %>
+      <% end %>
+      
     </div>
     </div>
-  </center>
+  </center> 
   <%= link_to rooms_path do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
