--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,18 @@
             </li>
           </ol>
         </nav>
+        <% flash.each do |type, msg| %>
+          <% if type == "error" %>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+              <%= msg %>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          <% end %>
+
+        <% end %>
+
         <% if notice %>
           <%= render 'layouts/alerts' %>
         <% end %>
