--- a/app/views/reservations/_new_step1.html.erb
+++ b/app/views/reservations/_new_step1.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
       <p class="col-lg-3">Phòng</p>
       <div class="col-lg-7 form-group">
-        <%= form.collection_select :room_id, Room.all.order(:id), :id, :name,{include_blank: false, selected: params[:room_id]}, {class: 'form-select'}%>
+        <%= form.collection_select :room_id, Room.where("status < ?", 3).to_a, :id, :name,{include_blank: false, selected: params[:room_id]}, {class: 'form-select'}%>
         <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
