update check null after delete room_type

--- a/app/views/room_types/index.html.erb
+++ b/app/views/room_types/index.html.erb
@@ -36,7 +36,7 @@
         </table>
         <div id="roomType_row_empty" class="hide_empty">
             <i class="fas fa-exclamation-triangle"></i>
-            <span>No row matched !</span>
+            <span>Không có dữ liệu phù hợp</span>
         </div>
     </div>
 
