--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -54,7 +54,7 @@
 				</table>
 				<div id="client_row_empty" class="hide_empty">
 					<i class="fas fa-exclamation-triangle"></i>
-					<span>No row matched !</span>
+					<span>Không có dữ liệu phù hợp</span>
 				</div>
 			</div> 
 	
