--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -56,7 +56,7 @@
         </table>
         <div id="employee_row_empty" class="hide_empty">
             <i class="fas fa-exclamation-triangle"></i>
-            <span>No row matched !</span>
+            <span>Không có dữ liệu phù hợp</span>
         </div>
     </div>
 
