--- a/app/views/room_prices/index.html.erb
+++ b/app/views/room_prices/index.html.erb
@@ -68,7 +68,7 @@
       </table>
       <div id="roomPrice_row_empty" class="hide_empty">
           <i class="fas fa-exclamation-triangle"></i>
-          <span>No row matched !</span>
+          <span>Không có dữ liệu phù hợp</span>
       </div>
   </div>
 
