update choose date in price_room

--- a/app/views/room_prices/_form.html.erb
+++ b/app/views/room_prices/_form.html.erb
@@ -37,7 +37,7 @@
                               flatpickr_min_date: Time.zone.now
                             },
                             class: "form-select read-only-white",
-                            placeholder: "Chọn sinh nhật"%>
+                            placeholder: "Chọn ngày"%>
       </div>
     </div>
     <div class="col-xl-5 row">
