Changing reservation form

--- a/app/views/reservations/_edit_step2.html.erb
+++ b/app/views/reservations/_edit_step2.html.erb
@@ -106,6 +106,7 @@
         <p class="col-lg-3">Tổng tiền</p>
         <div class="col-lg-7 form-group">
           <%= p.number_field :temp_total, min: 0, class:"form-control"%>
+          <%= p.hidden_field :payment_type %>
         </div>
       </div>
     </div>
