--- a/app/views/reservations/_edit_form.html.erb
+++ b/app/views/reservations/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: reservation)do |form| %>
+<%= form_with model: reservation do |form| %>
   <% if reservation.errors.any? %>
     <div id="error_explanation">
       <br>
