--- a/app/views/reservations/_new_step2.html.erb
+++ b/app/views/reservations/_new_step2.html.erb
@@ -1,13 +1,12 @@
-<%= form.fields_for :payment_attributes, Payment.new do |p| %>
+<%#= form.fields_for :payment_attributes, Payment.new do |p| %>
 <h5>Bước 2: Đăng ký thông tin khách hàng</h5>
-<%= p.fields_for :client_attributes, Client.new do |client| %>
+<%#= form.fields_for :client_attributes, Client.new do |client| %>
 <div class="row">
   <div class="col-lg-6 row">
     <div class="row end-row-md">
       <p class="col-lg-3">Tên khách</p>
       <div class="col-lg-7 form-group">
-        <%= client.text_field :name, class:"form-control", placeholder: "Nguyễn Văn A" %>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
+        <%= form.text_field "reservation[payment_attributes][client_attributes][name]", class:"form-control", placeholder: "Nguyễn Văn A",id:"_payment_attributes_client_attributes_name" %>
       </div>
     </div>
   </div>
@@ -15,8 +14,7 @@
     <div class="row row">
       <p class="col-lg-3">CCCD</p>
       <div class="col-lg-7 form-group">
-        <%= client.number_field   :citizen_id, class:"form-control", placeholder: "0123456789" %>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
+        <%= form.number_field   "reservation[payment_attributes][client_attributes][citizen_id]", class:"form-control", placeholder: "0123456789", id:"_payment_attributes_client_attributes_citizen_id" %>
       </div>
     </div>
   </div>
@@ -26,7 +24,7 @@
     <div class="row end-row-md">
       <p class="col-lg-3">Sinh nhật</p>
       <div class="col-lg-7 form-group">
-        <%= client.text_field :date_of_birth,
+        <%= form.text_field "reservation[payment_attributes][client_attributes][date_of_birth]",
                             data: {
                               controller: "flatpickr",
                               flatpickr_date_format: "d-m-Y",
@@ -34,7 +32,6 @@
                             },
                             class: "form-select read-only-white",
                             placeholder: "Chọn sinh nhật"%>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
       </div>
     </div>
   </div>
@@ -42,9 +39,7 @@
     <div class="row row">
       <p class="col-lg-3">Giới tính</p>
       <div class="col-lg-7 form-group">
-        <%= client.select :gender, options_for_select(@gender), {}, class: "form-select read-only-white" %>
-
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
+        <%= form.select "reservation[payment_attributes][client_attributes][gender]", options_for_select(@gender), {}, class: "form-select read-only-white" %>
       </div>
     </div>
   </div>
@@ -54,8 +49,7 @@
     <div class="row end-row-md">
       <p class="col-lg-3">Số điện thoại</p>
       <div class="col-lg-7 form-group">
-        <%= client.telephone_field   :phone_number, class:"form-control", placeholder: "0123456789" %>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
+        <%= form.telephone_field   "reservation[payment_attributes][client_attributes][phone_number]", class:"form-control", placeholder: "0123456789" %>
       </div>
     </div>
   </div>
@@ -63,8 +57,7 @@
     <div class="row row">
       <p class="col-lg-3">Email</p>
       <div class="col-lg-7 form-group">
-        <%= client.email_field   :email, class:"form-control", placeholder: "ngan@gmail.com" %>
-        <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
+        <%= form.email_field   "reservation[payment_attributes][client_attributes][email]", class:"form-control", placeholder: "ngan@gmail.com" %>
       </div>
     </div>
   </div>
@@ -74,16 +67,15 @@
     <div class="row end-row-md">
       <p class="col-lg-3">Quốc tịch</p>
       <div class="col-lg-7 form-group">
-        <%= client.text_field :nationality, class:"form-control", placeholder: "Việt Nam" %>
-<!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
+        <%= form.text_field "reservation[payment_attributes][client_attributes][nationality]", class:"form-control", placeholder: "Việt Nam" %>
       </div>
     </div>
   </div>
-  <%= client.hidden_field(:client_type, :value => 2) %>
-  <%= form.hidden_field(:client_name) %>
-  <%= form.hidden_field(:client_citizen_id) %>
+  <%= form.hidden_field("reservation[payment_attributes][client_attributes][client_type]", :value => 2) %>
+  <%= form.hidden_field("reservation[client_name]", :id=> "client_name") %>
+  <%= form.hidden_field("reservation[client_citizen_id]", :id=> "client_citizen_id") %>
 </div>
-  <% end %>
+  <%# end %>
 
   <h5>Bước 3: Thanh toán</h5>
 
@@ -92,9 +84,9 @@
       <div class="row end-row-md">
         <p class="col-lg-3">Đặt cọc</p>
         <div class="col-lg-7 form-group">
-          <%= p.hidden_field(:reservation_date, :value => Date.today)  %>
-          <%= p.hidden_field(:is_paid, :value => false)  %>
-          <%= p.number_field :deposit, min: 0, class:"form-control"%>
+          <%= form.hidden_field("reservation[payment_attributes][reservation_date]", :value => Date.today)  %>
+          <%= form.hidden_field("reservation[payment_attributes][is_paid]", :value => false)  %>
+          <%= form.number_field "reservation[payment_attributes][deposit]", min: 0, class:"form-control", id:"_payment_attributes_deposit"%>
         </div>
       </div>
     </div>
@@ -102,7 +94,7 @@
       <div class="row">
         <p class="col-lg-3">Hình thức TT</p>
         <div class="col-lg-7 form-group">
-          <%= p.select :payment_type, options_for_select(@payment_type_view), {}, class: "form-select read-only-white" %>
+          <%= form.select "reservation[payment_attributes][payment_type]", options_for_select(@payment_type_view), {}, class: "form-select read-only-white" %>
           <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
         </div>
       </div>
@@ -114,14 +106,14 @@
       <div class="row end-row-md">
         <p class="col-lg-3">Tổng tiền</p>
         <div class="col-lg-7 form-group">
-          <%= p.number_field :temp_total, min: 0, class:"form-control"%>
+          <%= form.number_field "reservation[payment_attributes][temp_total]", min: 0, class:"form-control", id:"_payment_attributes_temp_total"%>
         </div>
       </div>
     </div>
   </div>
 
 
-<% end %>
+<%# end %>
 <script>
     $('#_payment_attributes_client_attributes_name').change(function(){
         $('#client_name').val($('#_payment_attributes_client_attributes_name').val());
