--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,56 +1,101 @@
 <%  room_name = Room.find(@reservation.room_id).name %>
-<%  reservation_date = Payment.find(@reservation.payment_id).reservation_date %>
+<%  payment = Payment.find(@reservation.payment_id) %>
+<%  reservation_date = payment.reservation_date %>
 <%  reservation_date = reservation_date.strftime("%d/%m/%Y") %>
 <%  arrival_date = @reservation.arrival_date %>
 <%  arrival_date = arrival_date.strftime("%d/%m/%Y") %>
 <%  leave_date = @reservation.leave_date %>
 <%  leave_date = leave_date.strftime("%d/%m/%Y") %>
-<%  price = RoomPrice.find(RoomType.find(Room.find(@reservation.room_id).id).id).price %>
+<%  price = RoomPrice.find(RoomType.find(Room.find(@reservation.room_id).room_type_id).id).price %>
 <%  deposit = Payment.find(@reservation.payment_id).deposit %>
 <%  total = Payment.find(@reservation.payment_id).temp_total %>
 
+<% client = Client.find(payment.client_id) %>
+<div class="row justify-content-center">
 
+  <div class="card" style="max-width: 50%">
 
-<p>
-  <strong>Phòng:</strong>
-  <%= room_name %>
-</p>
-<p>
-  <strong>Giá</strong>
-  <%= price %>
-</p>
+    <div class="card-body">
+      <h4>Đơn đặt phòng</h4>
+      <p>
+        <strong>Trạng thái: </strong>
+        <%=  @reservation_statuses[@reservation.status - 1][:text] %>
+      </p>
 
-<p>
-  <strong>Trạng thái</strong>
-  <%=  @reservation_statuses[@reservation.status - 1][:text] %>
-</p>
-<p>
-  <strong>Tên khách hàng</strong>
-  <%= @reservation.client_name %>
-</p>
-<p>
-  <strong>Ngày đặt:</strong>
-  <%= reservation_date %>
-</p>
+      <p>
+        <strong>Ngày đặt:</strong>
+        <%= reservation_date %>
+      </p>
 
-<p>
-  <strong>Ngày đến:</strong>
-  <%= arrival_date %>
-</p>
+      <p>
+        <strong>Ngày đến:</strong>
+        <%= arrival_date %>
+      </p>
 
-<p>
-  <strong>Ngày đến:</strong>
-  <%= leave_date %>
-</p>
+      <p>
+        <strong>Ngày đi:</strong>
+        <%= leave_date %>
+      </p>
+      <p>
+        <strong>Đặt cọc:</strong>
+        <%= deposit %>
+      </p>
+      <p>
+        <strong>Tổng tiền:</strong>
+        <%= total %>
+      </p>
+      <h4>Thông tin phòng</h4>
+      <p>
+        <strong>Phòng:</strong>
+        <%= room_name %>
+      </p>
+      <p>
+        <strong>Giá</strong>
+        <%= price %>
+      </p>
+    </div>
+  </div>
 
-<p>
-  <strong>Đặt cọc:</strong>
-  <%= deposit %>
-</p>
-<p>
-  <strong>Tổng tiền:</strong>
-  <%= total %>
-</p>
+  <div class="col card ">
+    <div class="card-body">
 
+      <h4>Thông tin khách hàng</h4>
+      <p>
+        <strong>Tên khách hàng: </strong>
+        <%= @reservation.client_name %>
+      </p>
+      <p>
+        <strong>CCCD: </strong>
+        <%= @reservation.client_citizen_id %>
+      </p>
+      <p>
+        <strong>Số điện thoại: </strong>
+        <%= client.phone_number %>
+      </p>
+      <p>
+        <strong>Email: </strong>
+        <%= client.email %>
+      </p>
+      <p>
+        <strong>Ngày sinh: </strong>
+        <% if client.date_of_birth %>
+          <%= Date.parse(client.date_of_birth.to_s) %>
+        <% end %>
+      </p>
+
+      <p>
+        <strong>Giới tính: </strong>
+        <% index =  client.gender - 1 %>
+        <span><%= @client_gender[index][:text] %></span>
+      </p>
+      <p>
+        <strong>Quốc tịch: </strong>
+        <%= client.nationality %>
+      </p>
+
+    </div>
+
+  </div>
+</div>
 <%= link_to 'Edit', edit_reservation_path(@reservation) %> |
 <%= link_to 'Back', reservations_path %>
