--- a/app/views/cooperate_reservation/show.html.erb
+++ b/app/views/cooperate_reservation/show.html.erb
@@ -1,10 +1,4 @@
-<nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><%= link_to "Khách đoàn", cooperate_reservation_index_path %></li>
-    <li class="breadcrumb-item" aria-current="page"><a>Khách lẻ</a></li>
-  </ol>
-</nav>
-<h2 class="d-flex justify-content-center">Danh sách đặt phòng khách đoàn</h2>
+<h2 class="d-flex justify-content-center">Danh sách chi tiết của đoàn</h2>
 <% @reservations = Reservation.where(payment_id: @payment.id) %>
 <% if @reservations %>
 
