Fix quick res modal bug

--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -85,8 +85,11 @@
 
       <p>
         <strong>Giới tính: </strong>
-        <% index =  client.gender - 1 %>
-        <span><%= @client_gender[index][:text] %></span>
+        <% if client.gender %>
+          <% index =  client.gender - 1 %>
+          <span><%= @client_gender[index][:text] %></span>
+        <% end %>
+
       </p>
       <p>
         <strong>Quốc tịch: </strong>
