--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -14,7 +14,7 @@
       <div class="row end-row-md">
         <p class="col-lg-3">Tên khách</p>
         <div class="col-lg-7 form-group">
-          <%= form.text_field :client_name, class:"form-control", placeholder: "Nguyễn Văn A" %>
+          <%= form.text_field "reservation[client_name]", class:"form-control", placeholder: "Nguyễn Văn A",id:"_payment_attributes_client_attributes_name" %>
           <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
         </div>
       </div>
@@ -23,7 +23,7 @@
       <div class="row row">
         <p class="col-lg-3">CCCD</p>
         <div class="col-lg-7 form-group">
-          <%= form.text_field   :client_citizen_id, class:"form-control", placeholder: "0123456789" %>
+          <%= form.text_field   "reservation[client_citizen_id]", class:"form-control", placeholder: "0123456789", id:"_payment_attributes_client_attributes_citizen_id" %>
           <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
         </div>
       </div>
@@ -80,14 +80,15 @@
       <div class="row end-row-md">
         <p class="col-lg-3">Ngày đến</p>
         <div class="col-lg-7 form-group">
-          <%= form.text_field :arrival_date,
+          <%= form.text_field "reservation[arrival_date]",
                               data: {
                                 controller: "flatpickr",
                                 flatpickr_date_format: "d-m-Y",
                                 flatpickr_min_date: Time.zone.now
                               },
                               class: "form-select read-only-white",
-                              placeholder: "Chọn ngày đến"%>
+                              placeholder: "Chọn ngày đến",
+                              id: "arrival_date"%>
           <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
         </div>
       </div>
@@ -96,10 +97,10 @@
       <div class="row">
         <p class="col-lg-3">Đặt cọc</p>
         <div class="col-lg-7 form-group">
-          <%= form.fields_for :payment_attributes, Payment.new do |p| %>
-            <%= p.hidden_field(:reservation_date, :value => Date.today)  %>
-            <%= p.hidden_field(:is_paid, :value => false)  %>
-            <%= p.number_field :deposit, min: 0, class:"form-control"%>
+          <%#= form.fields_for :payment_attributes, Payment.new do |p| %>
+            <%= form.hidden_field("reservation[payment_attributes][reservation_date]", :value => Date.today)  %>
+            <%= form.hidden_field("reservation[payment_attributes][is_paid]", :value => false)  %>
+            <%= form.number_field "reservation[payment_attributes][deposit]", min: 0, class:"form-control", id: "_payment_attributes_deposit"%>
         </div>
       </div>
     </div>
@@ -109,14 +110,15 @@
       <div class="row end-row-md">
         <p class="col-lg-3">Ngày đi</p>
         <div class="col-lg-7 form-group">
-          <%= form.text_field :leave_date,
+          <%= form.text_field "reservation[leave_date]",
                               data: {
                                 controller: "flatpickr",
                                 flatpickr_date_format: "d-m-Y",
                                 flatpickr_min_date: Time.zone.now
                               },
                               class: "form-select read-only-white",
-                              placeholder: "Chọn ngày đi"%>
+                              placeholder: "Chọn ngày đi",
+                              id: "leave_date"%>
           <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
         </div>
       </div>
@@ -127,11 +129,11 @@
         <div class="col-lg-7 row" style="padding-right: 0; margin-right: 0">
           <p class="col-lg-2">NL</p>
           <div class="col-lg-4  form-group"  style="padding-right: 0; margin-right: 0">
-            <%= form.number_field :adults, in: 0 .. 20, class:"form-control" %>
+            <%= form.number_field "reservation[adults]", in: 0 .. 20, class:"form-control", id:"adults" %>
           </div>
           <p class="col-lg-2 ">TE</p>
           <div class="col-lg-4 form-group"  style="padding-right: 0; margin-right: 0">
-            <%= form.number_field :children, in: 0 .. 20 ,class:"form-control " %>
+            <%= form.number_field "reservation[children]", in: 0 .. 20 ,class:"form-control ", id:"children" %>
           </div>
         </div>
 
@@ -143,7 +145,7 @@
       <div class="row end-row-md">
         <p class="col-lg-3">Hình thức TT</p>
         <div class="col-lg-7 form-group">
-          <%= p.select :payment_type, options_for_select(@payment_type_view), {}, class: "form-select read-only-white" %>
+          <%= form.select "reservation[payment_attributes][payment_type]", options_for_select(@payment_type_view), {}, class: "form-select read-only-white" %>
           <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
 
         </div>
@@ -153,21 +155,21 @@
       <div class="row">
         <p class="col-lg-3">Tổng tiền</p>
         <div class="col-lg-7 form-group">
-          <%= p.number_field :temp_total, min: 0, class:"form-control"%>
+          <%= form.number_field "reservation[payment_attributes][temp_total]", min: 0, class:"form-control", id:"_payment_attributes_temp_total"%>
         </div>
       </div>
     </div>
   </div>
-  <%= p.fields_for :client_attributes, Client.new do |customer| %>
-    <%= customer.hidden_field(:name, :value => Client.find(1).name) %>
-    <%= customer.hidden_field(:citizen_id, :value => Client.find(1).citizen_id) %>
-  <% end %>
-<% end %>
+  <%#= p.fields_for :client_attributes, Client.new do |customer| %>
+    <%= form.hidden_field("reservation[payment_attributes][client_attributes][name]", :value => Client.find(1).name) %>
+    <%= form.hidden_field("reservation[payment_attributes][client_attributes][citizen_id]", :value => Client.find(1).citizen_id) %>
+  <%# end %>
+<%# end %>
 
-  <%= form.hidden_field(:check_in_date, :value => Date.today) %>
-  <%= form.hidden_field(:employee_id, :value => current_user.employee_id) %>
-  <%= form.hidden_field(:room_id, :value => params[:room_id]) %>
-  <%= form.hidden_field(:status, :value => 2) %>
+  <%= form.hidden_field("reservation[check_in_date]", :value => Date.today) %>
+  <%= form.hidden_field("reservation[employee_id]", :value => current_user.employee_id) %>
+  <%= form.hidden_field("reservation[room_id]", :value => params[:room_id]) %>
+  <%= form.hidden_field("reservation[status]", :value => 2) %>
   <br>
   <div class="d-flex actions justify-content-end">
     <%= form.submit "Save changes", class: "btn btn-primary add_reservation", data: { disable_with: false } %>
