--- a/app/views/room_diagram/_rooms.html.erb
+++ b/app/views/room_diagram/_rooms.html.erb
@@ -67,7 +67,7 @@
                       <% end %>
                     </div>
                     <div class="btn btn-primary">
-                      <%= link_to reservations_new_path do %>
+                      <%= link_to reservations_new_path(:room_id => room.id) do %>
                         Khách lẻ
                       <% end %>
                     </div>
